WagerMate/Components/Pages/Bet-overview.razor.css
* {
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.5em;
}

h1 {
    font-weight: bold;
}

p{
    margin: 0;
    padding: 0.1em;
}

#pageHeader {
    background: linear-gradient(135deg, #FF8000, #FF4500); 
    color: white; 
    padding: 20px;
    border-radius: 10px; 
    text-align: center; 
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); 
    margin-bottom: 20px; 
}

#pageHeader h1 {
    margin: 0; 
    font-size: 2.5em; 
    font-weight: bold; 
    text-transform: uppercase; 
    letter-spacing: 2px; 
}

#pageHeader::before {
    content: ''; 
    display: block;
    width: 60px; 
    height: 4px; 
    background: #FF4500; 
    margin: 0 auto 10px; 
    border-radius: 2px; 
}


#betOverviewPage {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    gap: 10px;
    transition: filter 0.3s ease;
}

#betsCount {
    background-image: linear-gradient(180deg, rgb(255, 94, 0) 0%, #FF8000 70%); 
    color: white; 
    padding: 15px;
    border-radius: 20px;
    text-align: center;
    font-size: 1.5em; 
    font-weight: bold;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); 
}

#betsCount h2 {
    margin: 0;
}


#creatNewBet {
    background-image: linear-gradient(180deg, rgb(255, 94, 0) 0%, #FF8000 70%);
    color: white;
    padding: 15px;
    border-radius: 20px;
    text-align: center;
}

#check-box-line{
    padding: 10px;
    align-content: center; 
    grid-row: 2;
    grid-column: 1 / span 4;
    border-left: 2px solid black;
    height: 100px;
    margin: 20px;
}

.bet-state{
    float: left;
    width: 33.33%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    align-content: center;
    justify-content: center;
}

.new-bet-button {
    background: #0056b3; 
    color: white;
    padding: 12px 20px;
    border: 2px solid #004494; 
    border-radius: 25px;
    font-size: 1em;
    font-weight: bold;
    cursor: pointer;
    transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
    outline: none;
    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
}

.new-bet-button:hover {
    background: #004494; 
    border-color: #003366; 
    transform: translateY(-4px); 
    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4); 
}

.new-bet-button:focus {
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5); 
    outline: none;
}

#allBets {
    padding: 20px;
    grid-row: 3;
    grid-column: 1 / span 2;
    background: #f2f2f2;
    border-radius: 15px;
}

.bets-heading {
    font-size: 2em; 
    color: #FF8000; 
    text-align: center; 
    margin-bottom: 20px; 
    font-weight: bold; 
    position: relative; 
    display: inline-block;
    background: linear-gradient(135deg, rgba(255, 128, 0, 0.1), rgba(255, 188, 146, 0.1));
    padding: 15px;
    padding-bottom: 10px; 
    border-radius: 8px;
}

.bets-heading::after {
    content: '';
    display: block;
    width: 50%; 
    height: 4px; 
    background: rgba(255, 128, 0, 0.7); 
    margin: 10px auto 0; 
    border-radius: 5px; 
}

#allBetsLayout {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 10px;
}

#popup-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7); 
    z-index: 999;
    display: none; 
}

#popup-overlay.active {
    display: block; 
}

#popup-content {
    position: fixed;
    text-align: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    z-index: 1000;
    padding: 40px;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
    border: 2px solid rgba(255, 128, 0, 0.5);
    border-radius: 30px;
    width: 60%;
    max-width: 600px;
}

.indiBet-Green {
    background: linear-gradient(135deg, rgba(46, 139, 87, 0.8), rgba(144, 238, 144, 0.8)); 
}

.indiBet-Orange{
    background: linear-gradient(135deg, rgba(255, 128, 0, 0.8), rgba(255, 188, 146, 0.8));
}

.indiBet-Grey {
    background: linear-gradient(135deg, rgba(112, 128, 144, 0.8), rgba(176, 196, 222, 0.8)); 
}

.icon-hourglass-split {
    display: inline-block;
    width: 16px;
    height: 16px;
    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="brown" class="bi bi-hourglass-split" viewBox="0 0 16 16"><path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/></svg>') no-repeat center center;
    vertical-align: middle;
    margin-right: 4px;
}

.icon-trophy {
    display: inline-block;
    width: 16px;
    height: 16px;
    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gold" class="bi bi-trophy" viewBox="0 0 16 16"><path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5q0 .807-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33 33 0 0 1 2.5.5m.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935m10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935M3.504 1q.01.775.056 1.469c.13 2.028.457 3.546.87 4.667C5.294 9.48 6.484 10 7 10a.5.5 0 0 1 .5.5v2.61a1 1 0 0 1-.757.97l-1.426.356a.5.5 0 0 0-.179.085L4.5 15h7l-.638-.479a.5.5 0 0 0-.18-.085l-1.425-.356a1 1 0 0 1-.757-.97V10.5A.5.5 0 0 1 9 10c.516 0 1.706-.52 2.57-2.864.413-1.12.74-2.64.87-4.667q.045-.694.056-1.469z"/></svg>') no-repeat center center;
    vertical-align: middle;
    margin-right: 4px;
}

.icon-lost-bet {
    display: inline-block;
    width: 16px;
    height: 16px;
    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-x-lg" viewBox="0 0 16 16"><path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/></svg>') no-repeat center center;
    vertical-align: middle;
    margin-right: 4px;
}

#individualBet {
    padding: 15px;
    border-radius: 15px;
    cursor: pointer;
    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
    display: flex;
    flex-direction: column;
    gap: 10px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); 
    color: #fff;
}

#individualBet:hover {
    transform: translateY(-5px) scale(1.05);
    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3); 
}

.bet-header {
    font-size: 1.2em;
    font-weight: bold;
    margin-bottom: 5px;
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    padding-bottom: 5px;
}

.bet-body {
    display: grid;
    grid-template-columns: 1fr 2fr;
    font-size: 1em;
    color: #fefefe;
    margin-bottom: 5px;
    column-gap: 5px;
    row-gap: 10px;
}

.bet-body strong {
    grid-column: 1;
}

.bet-body-value{
    grid-column: 2;
    overflow: auto;
    word-wrap: break-word;
}

.bet-body-value-description{
    grid-column: 2;
    overflow: auto;
    word-wrap: break-word;
    height: max(25px);
}

.bet-footer {
    display: flex;
    justify-content: space-between;
    font-size: 0.9em;
    color: #f5f5f5;
}

.bet-date {
    background: rgba(0, 0, 0, 0.3); 
    padding: 6px;
    border-radius: 10px;
}



#h2PopUpCreateNewBet {
    background-image: linear-gradient(180deg, rgb(255, 94, 0) 0%, #FF8000 70%);
    color: white;
    padding: 15px;
    margin-bottom: 15px;
    border-radius: 10px;
    text-align: center;
    font-size: 1.5em;
}

.create-bet-container {
    background-color: #f7f7f7;
    padding: 30px;
    border: 1px solid #ddd;
    border-radius: 10px;
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
    max-width: 500px;
    margin: 20px auto;
}

.form-group {
    margin-bottom: 20px;
}

.form-label {
    display: block;
    font-weight: bold;
    color: #333;
    margin-bottom: 8px;
    font-size: 16px;
}

.form-input {
    width: calc(100% - 10px);
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    font-size: 14px;
    transition: border-color 0.3s ease;
    box-sizing: border-box;
}

.form-input:focus {
    border-color: #ff8000;
    outline: none;
    box-shadow: 0 0 5px rgba(255, 128, 0, 0.3);
}

.button-group {
    display: flex;
    justify-content: space-between;
}

.create-button {
    background-color: #5cb85c;
    border: none;
    padding: 12px 20px;
    border-radius: 5px;
    cursor: pointer;
    color: white;
    transition: background-color 0.3s ease;
    font-size: 14px;
    width: 48%;
}

.create-button:hover {
    background-color: #4cae4c;
}

.cancel-button {
    width: 48%;
    padding: 12px;
    background-color: #d9534f;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.cancel-button:hover {
    background-color: #c9302c;
}

#h2PopUpBetDetails {
    background-image: linear-gradient(180deg, rgb(255, 94, 0) 0%, #FF8000 70%);
    color: white;
    padding: 15px;
    margin: 10px 0;
    border-radius: 10px;
    text-align: center;
    font-size: 1.5em;
}

.bet-details-container {
    background-color: #f9f9f9;
    padding: 30px;
    border: 1px solid #ddd;
    border-radius: 10px;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
    max-width: 500px;
    margin: 20px auto;
}

.bet-detail {
    display: flex;
    justify-content: space-between;
    margin-bottom: 15px;
    font-size: 16px;
}

.detail-label {
    font-weight: bold;
    color: #333;
}

.detail-value {
    color: #555;
}

.winnerList {
    margin-bottom: 15px;
    box-shadow: 0 6px 15px rgba(34, 139, 34, 0.3);
    border: rgb(34, 139, 34) 2px solid;
    border-radius: 15px;
}

.winner-header{
    font-size: 1.2em;
    font-weight: bold;
    border-bottom: 1px solid rgba(34, 139, 34, 0.6);
    padding: 5px;
}

@media (max-width: 960px) {
    #allBetsLayout {
        grid-template-columns: 1fr;  /* Single column */
        grid-template-rows: 1fr;     /* Single row */
    }
}

